<resources>
    <string name="abdominal_pain">Abdominal pain</string>
    <string name="abdominal_swelling">Abdominal swelling</string>
    <string name="angry">Angry</string>
    <string name="app_name">My Period Data Is Mine!</string>
    <string name="april">April</string>
    <string name="august">August</string>
    <string name="backache">Backache</string>
    <string name="cancel">Cancel</string>
    <string name="change_passcode">Change passcode</string>
    <string name="change_passcode_text">Enter your new secret passcode</string>
    <string name="december">December</string>
    <string name="decrypt_text">Enter your passcode to decrypt your data</string>
    <string name="delete">Del</string>
    <string name="edit">Edit</string>
    <string name="encrypt_text">Enter a secret passcode that you will use to decrypt your data</string>
    <string name="fatigue">Fatigue</string>
    <string name="february">February</string>
    <string name="flow_level">Flow Level</string>
    <string name="get_started">Get Started!</string>
    <string name="happy">Happy</string>
    <string name="headache">Headache</string>
    <string name="heavy">Heavy</string>
    <string name="hip_pain">Hip pain</string>
    <string name="icon_image">Icon image</string>
    <string name="image_logo_description">My Period Data Is Mine! logo</string>
    <string name="irritability">Irritability</string>
    <string name="january">January</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="light">Light</string>
    <string name="march">March</string>
    <string name="may">May</string>
    <string name="migraine_pain">Migraine pain</string>
    <string name="moderate">Moderate</string>
    <string name="mood">Mood</string>
    <string name="muscle_pain">Muscle pain</string>
    <string name="name">Name</string>
    <string name="name_hint">Your preferred name</string>
    <string name="next_day">Next day</string>
    <string name="none">None</string>
    <string name="november">November</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="october">October</string>
    <string name="ok">OK</string>
    <string name="omg">OMG</string>
    <string name="passcode">Passcode</string>
    <string name="previous_day">Previous day</string>
    <string name="sad">Sad</string>
    <string name="save">Save</string>
    <string name="select_flow_level">Select flow level</string>
    <string name="select_moods">Select moods</string>
    <string name="select_symptoms">Select symptoms</string>
    <string name="september">September</string>
    <string name="sick">Sick</string>
    <string name="slogan">The only private, encrypted and free period tracking app.</string>
    <string name="stomach_upset">Stomach upset</string>
    <string name="sweat">Sweat</string>
    <string name="symptoms">Symptoms</string>
    <string name="tired">Tired</string>
    <string name="user_data">User data</string>
    <string name="vomit">Vomit</string>
    <string name="welcome_message">Welcome to\nMy Period Data is Mine!</string>
</resources>
