<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:gravity="center"
>
    <TextView
        android:id="@+id/passcode_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
    />
    <EditText
        android:id="@+id/passcode_edit_text"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:gravity="center_horizontal"
        android:hint="@string/passcode"
        android:textColorHint="#757575"
        android:importantForAutofill="no"
    />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
    >
        <Button
            android:id="@+id/number_1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_1"
        />
        <Button
            android:id="@+id/number_2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_2"
        />
        <Button
            android:id="@+id/number_3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_3"
        />
        <Button
            android:id="@+id/number_4_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_4"
        />
        <Button
            android:id="@+id/number_5_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_5"
        />
        <Button
            android:id="@+id/number_6_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_6"
        />
        <Button
            android:id="@+id/number_7_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_7"
        />
        <Button
            android:id="@+id/number_8_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_8"
        />
        <Button
            android:id="@+id/number_9_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_9"
        />
        <Button
            android:id="@+id/del_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete"
        />
        <Button
            android:id="@+id/number_0_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/number_0"
        />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ok"
        />
    </GridLayout>
</LinearLayout>
