<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
    >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/user_data"
        />
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/save"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:gravity="start"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name"
        />
        <EditText
            android:id="@+id/name_edit_text"
            android:inputType="textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:minWidth="200dp"
            android:minHeight="48dp"
            android:gravity="start"
            android:hint="@string/name_hint"
            android:textColorHint="#757575"
            android:importantForAutofill="no"
        />
    </LinearLayout>
</LinearLayout>
