<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
        >
            <ImageView
                android:id="@+id/previous_day"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/left_arrow"
                android:contentDescription="@string/previous_day"
            />
            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
            />
            <ImageView
                android:id="@+id/next_day"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/right_arrow"
                android:contentDescription="@string/next_day"
            />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/flow_level"
        />
        <LinearLayout
            android:id="@+id/flow_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/mood"
        />
        <com.google.android.flexbox.FlexboxLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/moods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            >
        </com.google.android.flexbox.FlexboxLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/symptoms"
        />
        <com.google.android.flexbox.FlexboxLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
        >
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>
</ScrollView>
